minor modif efficiency (multiplier always < than 1)

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,29 @@
 .ipynb_checkpoints/notebook_course_examples-checkpoint.ipynb
+calculation_modules/propulsion/process/__pycache__/__init__.cpython-39.pyc
+calculation_modules/propulsion/process/__pycache__/combustion.cpython-39.pyc
+calculation_modules/propulsion/process/__pycache__/compression.cpython-39.pyc
+calculation_modules/propulsion/process/__pycache__/expansion.cpython-39.pyc
+calculation_modules/propulsion/process/__pycache__/generic_propulsion_process.cpython-39.pyc
+calculation_modules/propulsion/process/__pycache__/intake.cpython-39.pyc
+calculation_modules/propulsion/process/__pycache__/nozzle.cpython-39.pyc
+calculation_modules/propulsion/process/__pycache__/process_stream.cpython-39.pyc
+calculation_modules/propulsion/compute_methods/__pycache__/__init__.cpython-39.pyc
+calculation_modules/propulsion/compute_methods/__pycache__/generic_propulsion.cpython-39.pyc
+calculation_modules/propulsion/compute_methods/__pycache__/ramjet_compute.cpython-39.pyc
+calculation_modules/propulsion/compute_methods/__pycache__/turbofan_compute.cpython-39.pyc
+calculation_modules/propulsion/compute_methods/__pycache__/turbojet_compute.cpython-39.pyc
+calculation_modules/propulsion/compute_methods/__pycache__/turboprop_compute.cpython-39.pyc
+.gitignore
+aircraft_modules/__pycache__/__init__.cpython-39.pyc
+aircraft_modules/__pycache__/generic_module.cpython-39.pyc
+.gitignore
+__pycache__/aircraft.cpython-39.pyc
+.gitignore
+calculation_modules/propulsion/__pycache__/propulsion_methods.cpython-39.pyc
+calculation_modules/propulsion/__pycache__/propulsion_parameters.cpython-39.pyc
+calculation_modules/propulsion/__pycache__/propulsion_results.cpython-39.pyc
+calculation_modules/propulsion/__pycache__/propulsion_wrapper.cpython-39.pyc
+aircraft_modules/propulsion/components/__pycache__/combustor.cpython-39.pyc
+aircraft_modules/propulsion/components/__pycache__/generic_propulsion_component.cpython-39.pyc
+aircraft_modules/propulsion/components/__pycache__/combustor.cpython-39.pyc
+aircraft_modules/propulsion/components/__pycache__/generic_propulsion_component.cpython-39.pyc
